--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
  /* fotn family  link  */
  @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500&family=Raleway:wght@400;700&family=Roboto:wght@400;700&display=swap');
 
-
+  /* varable custom css  */
+   
+:root {
+    --btn-bg-color: #E02C6d
+}
  /* common css */
 
 
@@ -9,12 +13,31 @@
      margin: 0px;
      padding: 0px;
      font-family: 'Roboto', sans-serif;
+     font-size: 18px;
+     line-height: 1.5;
+     background: #f7f7f7;
  }
  .container{
-     width: 1200px;
+     width: 1170px;
      margin: auto;
+     padding: 15px
  }
-
+.cta-btn{
+    background-color:var(--btn-bg-color);
+    padding: 10px 20px;
+    text-decoration: none;
+    color: white;
+    font-weight: 700;
+    border-radius: 10px;
+    border:none;
+    cursor: pointer;
+   
+}
+.cta-btn>i{
+    font-size: 18px;
+    margin-left:5px;
+    
+}
 
  /* Header section  */
  .navbar{
@@ -58,37 +81,173 @@
      display: none;
  }
 
- /* media query  */
- @media  only screen and ( max-width:640px) {
-  /* header section media query  Mobile version */
 
+ /* influencer css  */
 
-  .navbar{
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-}
-.container {
-         width: 100%;
-     }
-.toggle-btn{
-    display: block;
-}
-.nav-title{
-    font-size: 18px;
-}
-.nav-menu{
-    display: none;
-}
-
-
-
-.cart-icon{
-        display:block;
-    }
-    .cart-icon .fas {
-        font-size: 35px;
-    }
-
+ .influencer{
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     padding: 60px 0px;
+    
+ }
+ .influencer-content{
+     padding-right:20px;
+ }
+ 
+ .influencer-content h1{
+     font-size: 45px;
 
  }
+ .influencer-content p{
+     margin-bottom: 30px;
+ }
+ .influencer-img img{ 
+     float:right;
+     transition: transform 1s;
+
+ }
+ .influencer-img:hover img{
+     transform:scale(1.3) ;
+     cursor: pointer;
+ }
+
+/* logos section  */
+.logos{
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    padding: 40px 0px;
+    align-items: center;
+}
+#logos hr {
+  
+    border-bottom: 1px solid rgba(253, 245, 230, 0.199)
+}
+
+/* collection css  */
+.section-title {
+    text-align: center;
+    font-size: 40px;
+    padding: 30px 0px;
+}
+.collection{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px;
+}
+.collection-iteam{
+    background:#fff;
+    padding: 30px;
+    padding-top: 30px;
+
+    
+   
+}
+.collection-iteam h3 {
+    font-size: 30px;
+    margin: 0px;
+    margin-bottom: 10px;
+}
+.collection-iteam h4{
+    font-size: 22px;
+    margin: 0 ;
+    margin-bottom: 5px;
+} 
+.collection-rating{
+    color: orange;
+    display: inline;
+    font-size: 12px;
+}
+.collection-info span {
+    font-size: 14px;
+}
+.collection-iteam p{
+    margin: 0px;
+    font-size: 16px;
+}
+
+.collection-see-more  {
+    color: var(--btn-bg-color);
+    float: right;
+}
+
+/* contacts section css  */
+#contact{
+    margin-bottom: 30px;
+}
+.contacts{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 40px;
+    
+}
+.contact-info{
+    background:#fff;
+    padding: 20px;
+    
+}
+.contact-info h5 {
+    margin:10px 0px;
+}
+.contact-descrip {
+    padding-right: 60px;
+}
+
+.contact-info h2
+{
+    margin: 0px;
+}
+
+.contact-icon .fa{
+    
+    border-radius: 50%;
+    border: 1px solid black;
+    padding: 10px;
+    margin-right: 10px;;
+    transition: color 1s, border 1s;
+
+}
+.contact-icon:hover .fa{
+    color: var(--btn-bg-color);
+    border: 1px solid var(--btn-bg-color);
+}
+.contact-form{
+    background:#fff;
+   padding: 30px;
+}
+.single-form input[type="text"],
+.single-form input[type="email"],
+.single-form textarea
+{
+    width: 96%;
+    padding: 10px;
+    margin: 10px 0px;
+    border: 1px solid rgba(0, 0, 0, 0.164);
+    border-radius: 5px;
+}
+/* Footer section  */
+#footer{
+   background-image: url(images/footer.png);
+   background-size: cover;
+
+    color: #fff;
+    margin: auto;
+    text-align: center;
+    
+}
+.footer-info{
+    
+}
+
+#footer p{
+    margin: 0px;
+    margin-bottom: 5px;
+}
+.footer-icon .fa{
+    padding: 10px;
+    border: 1px solid;
+    border-radius: 50%;
+    margin: 10px;
+    margin-top: 20px;
+    
+    
+}
